loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:11: error: not found: value sortietrouvé
} while (!sortietrouvé); 
          ^