loopdowhile.Poucet1.scala.code
do {
  var nbbisc:Int = 0 ;
  for (i<-0 to 5) {
    avance ; 
    if (estSurBiscuit)
          nbbisc =nbbisc+1;
  }
  ;if (nbbisc >2) 
  gauche;   
  else droite;
} while (!sortietrouvé);